# pdf_slurper

./: .cursorrules  .gitignore  ALL_FIELDS_DISPLAYED.md  API_CRUD_DOCUMENTATION.md  ARCHITECTURE.md  CONFIG_FIX_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DIRECT_LINKS_GUIDE.md  Dockerfile  Dockerfile.v2  Dockerfile.web  Dockerfile.web-fixed  EDITING_FUNCTIONALITY_COMPLETE.md  EDITING_SOLUTION_COMPLETE.md  FRONTEND_UPDATE_COMPLETE.md  HTSF_EXTRACTION_SUCCESS.md  LOCAL_SETUP_GUIDE.md  LOCAL_UV_SUCCESS.md  MIGRATION_GUIDE.md  MIGRATION_STATUS.md  OPENSHIFT_DATA_ISSUE_SUMMARY.md  OPENSHIFT_DEPLOYMENT_TODO.md  OPENSHIFT_FINAL_FIX_SUMMARY.md  OPENSHIFT_FINAL_STATUS.md  OPENSHIFT_FIXES_COMPLETED.md  OPENSHIFT_FIX_SUMMARY.md  OPENSHIFT_TROUBLESHOOTING.md  OPENSHIFT_URLS.md  PDF_COMPLETE_DATA_SOLUTION.md  PDF_EXTRACTION_COMPLETE.md  PDF_UPLOAD_STATUS.md  PRODUCTION_DEPLOYMENT.md  README.md  SAMPLES_ISSUE_RESOLVED.md  SAMPLES_ISSUE_SUMMARY.md  SECURITY_INCIDENT_RESPONSE.md  STORAGE_FIX_SUMMARY.md  STORAGE_LOCATION_UPDATE.md  SUBMISSION_DETAIL_DISPLAY.md  (+70 more)
.cursor/rules/: data-flow.mdc  data-models-relationships.mdc  pdf-processing-algorithms.mdc  qc-algorithms.mdc
.data/: db.sqlite3
.giga/: specifications.json
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 66f9fa099abe_init_schema.py  (+1 more)
data/: pdf_slurper.db
k8s/: all-in-one.yaml  configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
nginx/: default.conf  nginx-fixed.conf  nginx.conf
openshift/: deployment-combined.yaml  deployment-crud.yaml  deployment-minimal.yaml  deployment-no-pvc.yaml  deployment-v2.yaml  secrets-template.yaml  secrets.yaml
pdf_slurper/: __init__.py  cli.py  cli_v2.py  db.py  exporters.py  hash_utils.py  mapping.py  server.py  slurp.py
scripts/: build-web-ui.sh  cleanup_legacy.py  deploy-crud-openshift.sh  deploy-fixed.sh  deploy-openshift-fixed.sh  deploy-openshift.sh  deploy.sh  manage-quota.sh  parallel_test.py  quick-fix-deploy.sh
src/: adapter.py  input.css
tests/: conftest.py
web-build/: Dockerfile
web-static/: config.js  dashboard.html  upload.html
(+41 files in other folders)
