[project]
name = "pdf-slurper"
version = "2.0.0"
description = "Professional PDF data extraction and sample tracking system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "rich>=13.7.0",
    "typer>=0.12.3",
    "pdfplumber>=0.11.4",
    "sqlmodel>=0.0.22",
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "alembic>=1.13.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "faker>=20.0.0",
    "factory-boy>=3.3.0",
]

[project.scripts]
pdf-slurp = "pdf_slurper.cli:app"
pdf-slurp-web = "pdf_slurper.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pdf_slurper*"]

[tool.setuptools.package-data]
pdf_slurper = ["templates/*.html"]

[tool.uv]
package = true
